# DeepHunt

./: .gitignore  CONTRIBUTING.md  CONTRIBUTIONS.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
deephunt/: __init__.py  __main__.py  cli.py
deephunt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
deephunt/agents/: __init__.py  recon_agent.py  skill_builder_agent.py  vuln_id_agent.py
deephunt/core/: __init__.py  config.py  identity.py  orchestrator.py  scope.py
deephunt/skills/: __init__.py  loader.py
deephunt/utils/: __init__.py  banner.py  logger.py  runner.py  termux.py
scripts/: deephunt.spec  setup_termux.sh
skills/00-meta/: QUICK-REFERENCE.md  README.md
skills/01-roadmap/: engagement-lifecycle.md  hacking-roadmap.md
skills/02-reasoning-thinking/: adversarial-simulation.md  attack-chain-composer.md  per-framework.md  thinking-validation.md  threat-modeling.md
skills/03-recon-osint/: active-recon.md  attack-surface-mapping.md  dark-web-intelligence.md  osint.md
skills/04-vulnerability-finding/: command-injection-advanced.md  credential-audit.md  cve-analysis.md  jwt-security-testing.md  oauth-security-testing.md  prototype-pollution.md  sast-sca-triage.md  ssti-server-side-template-injection.md  supply-chain-security.md
skills/05-web-exploitation/: business-logic-vulnerabilities.md  param-fuzz-business-logic.md  ssl-tls-audit.md  web-exploit.md
skills/06-api-security/: api-security.md  api-testing-methodology.md  email-security.md  graphql-security.md  mobile-api-security.md
skills/07-network-exploitation/: network-assess.md  pivot-tunnel.md
skills/08-post-exploitation/: linux-windows-privesc-deep.md  post-exploit.md
skills/09-lateral-movement/: credential-reuse-harvesting.md  lateral-movement.md
skills/10-cloud-container/: cloud-iam-privilege-escalation.md  cloud-security.md
skills/11-active-directory/: ad-assessment.md  adcs-kerberos-deep.md
skills/12-ai-redteam/: ai-redteam.md  colang-gen.md  rag-mcp-agent-attacks.md
skills/13-exploit-dev-binary/: exploit-dev.md  reverse-engineering.md
skills/15-red-team-ops/: credential-harvest-phishing.md  evasion-opsec-advanced.md  red-team-ops.md
skills/16-reporting-remediation/: reporting.md  vulnerability-scoring.md
skills/17-frameworks-tools/: metasploit-guide.md  tool-registry.md
skills/18-ctf-methodology/: ctf-ai-agent-workflow.md  ctf-strategy.md
(+22 files in other folders)
