[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deephunt"
version = "1.0.0"
description = "DeepHunt - Autonomous AI-Driven Cybersecurity Agent for Termux"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "PwnedBytes0x1", email = "PwnedBytes0x1@example.com"}
]
keywords = [
    "cybersecurity", "bug-bounty", "penetration-testing", "ai-agent",
    "autonomous", "termux", "android", "security", "hacking", "reconnaissance"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Android",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "aiohttp>=3.8",
    "aiofiles>=22.0",
    "beautifulsoup4>=4.11",
    "lxml>=4.9",
    "html2text>=2020.1.16",
    "requests>=2.28",
    "urllib3>=1.26",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "ujson>=5.0",
    "httpx[http2]>=0.25",
    "websockets>=11.0",
    "schedule>=1.2",
    "cryptography>=41.0",
    "prompt-toolkit>=3.0",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot[ext]>=20.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pyinstaller>=5.13",
]

[project.scripts]
dhunt = "deephunt.cli:main"
deeephunt = "deephunt.cli:main"

[project.urls]
Homepage = "https://github.com/PwnedBytes0x1/deephunt"
Repository = "https://github.com/PwnedBytes0x1/deephunt.git"
Issues = "https://github.com/PwnedBytes0x1/deephunt/issues"
Wiki = "https://github.com/PwnedBytes0x1/deephunt/wiki"

[tool.setuptools.packages.find]
where = ["."]
include = ["deephunt*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
